    * Updates Nimbus JOSE+JWT to 9.30.2
    * Updates JSON Smart to 2.4.10
    * Updates Google Tink to 1.8.0

version 10.7.2 (2023-04-17)
    * ClientMetadata and OIDCClientMetadata.parse must not designate the
      top-level client information fields as custom metadata fields (iss #421).

version 10.8 (2023-04-22)
    * Factors out an AbstractConfirmation class for X509CertificateConfirmation
      and JWKThumbprintConfirmation.
    * Adds new AbstractConfirmation.mergeInto(JSONObject) method.

version 10.9 (2023-05-06)
    * Adds ClaimsSet.toString() as toJSONString() alias.

version 10.9.1 (2023-05-11)
    * ClientMetadata.parse and OIDCClientMetadata.parse must filter out illegal
      chars in the error_description (iss #423).

version 10.9.2 (2023-06-21)
    * HTTPResponse.send must read error responses from InputStreamReader using
      UTF-8 character encoding (iss #426).

version 10.10 (2023-06-29)
    * Adds StandardOperations class to enumerate all standard OpenID Connect
      Federation 1.0 policy operation names and the order in which the standard
      operations must be applied to a metadata parameter.
    * The OpenID Connect Federation 1.0 AddOperation.apply method must not
      add value(s) that are already present in the parameter.
    * The OpenID Connect Federation 1.0 AddOperation.apply method must return
      an immutable List<String>.
    * The OpenID Connect Federation 1.0 SubsetOfOperation.apply method must
      return null instead of an empty List<String>.
    * Updates MetadataPolicyEntry.apply to process "one_of", "subset_of" and
      "superset_of" for voluntary parameters according to OpenID Connect
      Federation 1.0 draft 29.

version 10.10.1 (2023-06-29)
    * MetadataPolicyEntry.apply must throw a PolicyViolationException when an
      essential parameter fails a subset_of check.

version 10.11 (2023-07-08)
    * Adds EntityStatementClaimsSet.getRPInformation and setRPInformation
      methods (iss #428).