@@ -18,13 +18,6 @@
 package com.nimbusds.openid.connect.sdk.federation.entities;
 
 
-import java.util.Date;
-import java.util.LinkedList;
-import java.util.List;
-
-import net.minidev.json.JSONArray;
-import net.minidev.json.JSONObject;
-
 import com.nimbusds.oauth2.sdk.ParseException;
 import com.nimbusds.oauth2.sdk.as.AuthorizationServerMetadata;
 import com.nimbusds.oauth2.sdk.client.ClientMetadata;
@@ -35,6 +28,12 @@ import com.nimbusds.openid.connect.sdk.federation.trust.marks.TrustMarkEntry;
 import com.nimbusds.openid.connect.sdk.federation.trust.marks.TrustMarkIssuerMetadata;
 import com.nimbusds.openid.connect.sdk.op.OIDCProviderMetadata;
 import com.nimbusds.openid.connect.sdk.rp.OIDCClientMetadata;
+import net.minidev.json.JSONArray;
+import net.minidev.json.JSONObject;
+
+import java.util.Date;
+import java.util.LinkedList;
+import java.util.List;
 
 
 /**
@@ -172,6 +171,31 @@ public abstract class CommonFederationClaimsSet extends CommonClaimsSet {
 			return null;
 		}
 	}
+
+
+	/**
+	 * Sets the metadata for the specified entity type. Use a typed setter,
+	 * such as {@link #setRPMetadata}, when available. Corresponds to the
+	 * {@code metadata} claim.
+	 *
+	 * @param type     The type. Must not be {@code null}.
+	 * @param metadata The metadata, {@code null} if not specified.
+	 */
+	public void setMetadata(final EntityType type, final JSONObject metadata) {
+
+		JSONObject o = getJSONObjectClaim(METADATA_CLAIM_NAME);
+
+		if (o == null) {
+			if (metadata == null) {
+				return; // nothing to clear
+			}
+			o = new JSONObject();
+		}
+
+		o.put(type.getValue(), metadata);
+
+		setClaim(METADATA_CLAIM_NAME, o);
+	}
 	
 	
 	/**
@@ -194,6 +218,19 @@ public abstract class CommonFederationClaimsSet extends CommonClaimsSet {
 		} catch (ParseException e) {
 			return null;
 		}
+	}
+
+
+	/**
+	 * Sets the OpenID relying party metadata if present for this entity.
+	 * Corresponds to the {@code metadata.openid_relying_party} claim.
+	 *
+	 * @param rpMetadata The RP metadata, {@code null} if not specified.
+	 */
+	public void setRPMetadata(final OIDCClientMetadata rpMetadata) {
+
+		JSONObject o = rpMetadata != null ? rpMetadata.toJSONObject() : null;
+		setMetadata(EntityType.OPENID_RELYING_PARTY, o);
 	}
 	
 	
@@ -218,6 +255,19 @@ public abstract class CommonFederationClaimsSet extends CommonClaimsSet {
 			return null;
 		}
 	}
+
+
+	/**
+	 * Gets the OpenID provider metadata if present for this entity.
+	 * Corresponds to the {@code metadata.openid_provider} claim.
+	 *
+	 * @param opMetadata The OP metadata, {@code null} if not specified.
+	 */
+	public void setOPMetadata(final OIDCProviderMetadata opMetadata) {
+
+		JSONObject o = opMetadata != null ? opMetadata.toJSONObject() : null;
+		setMetadata(EntityType.OPENID_PROVIDER, o);
+	}
 	
 	
 	/**
@@ -240,6 +290,20 @@ public abstract class CommonFederationClaimsSet extends CommonClaimsSet {
 		} catch (ParseException e) {
 			return null;
 		}
+	}
+
+
+	/**
+	 * Sets the OAuth 2.0 client metadata if present for this entity.
+	 * Corresponds to the {@code metadata.oauth_client} claim.
+	 *
+	 * @param clientMetadata The client metadata, {@code null} if not
+	 *                       specified.
+	 */
+	public void setOAuthClientMetadata(final ClientMetadata clientMetadata) {
+
+		JSONObject o = clientMetadata != null ? clientMetadata.toJSONObject() : null;
+		setMetadata(EntityType.OAUTH_CLIENT, o);
 	}
 	
 	
@@ -265,6 +329,20 @@ public abstract class CommonFederationClaimsSet extends CommonClaimsSet {
 			return null;
 		}
 	}
+
+
+	/**
+	 * Sets the OAuth 2.0 authorisation server metadata if present for this
+	 * entity. Corresponds to the
+	 * {@code metadata.oauth_authorization_server} claim.
+	 *
+	 * @param asMetadata The AS metadata, {@code null} if not specified.
+	 */
+	public void setASMetadata(final AuthorizationServerMetadata asMetadata) {
+
+		JSONObject o = asMetadata != null ? asMetadata.toJSONObject() : null;
+		setMetadata(EntityType.OAUTH_AUTHORIZATION_SERVER, o);
+	}
 	
 	
 	/**
@@ -287,6 +365,20 @@ public abstract class CommonFederationClaimsSet extends CommonClaimsSet {
 		} catch (ParseException e) {
 			return null;
 		}
+	}
+
+
+	/**
+	 * Sets the federation entity metadata if present for this entity.
+	 * Corresponds to the {@code metadata.federation_entity} claim.
+	 *
+	 * @param entityMetadata The federation entity metadata, {@code null}
+	 *                       if not specified.
+	 */
+	public void setFederationEntityMetadata(final FederationEntityMetadata entityMetadata) {
+
+		JSONObject o = entityMetadata != null ? entityMetadata.toJSONObject() : null;
+		setMetadata(EntityType.FEDERATION_ENTITY, o);
 	}
 	
 	
